manifests/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: live-clinic-url
  namespace: blu-live-clinic
spec:
  # This host is recommended to match your wildcard cert
  host: live-clinic-url.apps.lab.ocp.bludive 
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 80
  tls:
    termination: edge
    # This automatically redirects http traffic to https
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDDDCCAfSgAwIBAgIUSO7bU/OwvgY1DYeZ4zjHgr8UVzMwDQYJKoZIhvcNAQEL
[...]
      PcaeAbz36BHae931gdeVyg==
      -----END CERTIFICATE-----  
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCYxSDI+t1TGZ9z
[...]
      6AA5iDOxZq6ASLttAVoyEw==
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIDFzCCAf+gAwIBAgIUGFGXZn6FHZB9nFYBPXdS8GYwGL4wDQYJKoZIhvcNAQEL
[...]
      biw2zrTvaVbwmGFaP/nXAKRdg7ZFpmMtjNB6
      -----END CERTIFICATE-----











apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: live-clinic-url
  namespace: blu-live-clinic
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 80
